Fixed priority popup to go down so it doesn't overlap the tasks on the right

--- a/app/assets/stylesheets/pages/_today_page.scss
+++ b/app/assets/stylesheets/pages/_today_page.scss
@@ -269,11 +269,11 @@
     height: 0.5em;
     border: none;
     padding: 0;
+    line-height: 0.5em;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    line-height: 0.5em;
     cursor: pointer;
   }
 
@@ -283,9 +283,19 @@
     justify-content: center;
     border: 1px solid $black;
     border-radius: 0.5em;
-    padding: 0.5em;
+    padding: 0.3em;
     gap: 0.3em;
     position: absolute;
-    right: -2.5em;
+    right: -0.5em;
+    top: 0;
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    p {
+      line-height: 1em;
+      margin-bottom: 0;;
+    }
   }
 }
